--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -161,7 +161,8 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
   height: 38px;
   bottom: 0px;
   right: 40px;
-  background-color: #717fe0;
+  /* background-color: #717fe0; */
+  background-color: #222;
   opacity: 0.5;
   justify-content: center;
   align-items: center;
@@ -181,7 +182,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 
 .btn-back-to-top:hover {
   opacity: 1;
-  background-color: #717fe0;
+  background-color: #222;
 }
 
 @media (max-width: 575px) {
