--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2023,7 +2023,8 @@ input.num-product::-webkit-inner-spin-button {
 
 /*---------------------------------------------*/
 .block1-txt:hover {
-  background-color: rgba(103,117,214,0.8);
+  background-color: rgba(194, 195, 199, 0.8);
+  background-color: #222;
 }
 
 .block1-txt:hover .block1-txt-child2 {
